# Lianjia-Spider-Demo

./: .gitignore  README.md  pyproject.toml
code/: area_price_bar_chart.py  area_price_data_filter.py  bj_region_clean.py  cpi_bar_chart.py  direction_unit_price_bar_chart.py  direction_unit_price_box_chart.py  direction_unit_price_distribution.py  direction_unit_price_filter.py  gdp_price_scatter_chart.py  gdp_unit_price_chart.py  gdp_unit_price_scatter_chart.py  gz_region_clean.py  price_bar_chart.py  price_data_filter.py  price_radar_chart.py  region_price_data_filter.py  region_price_heat_map.py  room_price_bar_chart.py  room_price_data_filter.py  room_price_line_chart.py  salary_cpi_bar_chart.py  salary_unit_price_chart.py  salary_unit_price_scatter_chart.py  sh_region_clean.py  slaray_price_pie_chart.py  sz_region_clean.py  unit_price_filter.py
data/: bj_area_price_data.csv  bj_direction_unit_price_data.csv  bj_region_price_data.csv  bj_room_price_data.csv  bj_unit_price_data.csv  changde_area_price_data.csv  changde_direction_unit_price_data.csv  changde_region_price_data.csv  changde_rent_house_data.json  changde_room_price_data.csv  changde_unit_price_data.csv  gz_area_price_data.csv  gz_direction_unit_price_data.csv  gz_region_price_data.csv  gz_room_price_data.csv  gz_unit_price_data.csv  new_house_data.json  price_data.csv  sh_area_price_data.csv  sh_direction_unit_price_data.csv  sh_region_price_data.csv  sh_room_price_data.csv  sh_unit_price_data.csv  sz_area_price_data.csv  sz_direction_unit_price_data.csv  sz_region_price_data.csv  sz_room_price_data.csv  (+2 more)
(+15 files in other folders)
