[project]
name = "data-capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.9.4",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "scrapy>=2.12.0",
    "seaborn>=0.13.2",
    "six>=1.16.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]
